--- a/src/app/auth/pages/forgot-password/forgot-password.component.css
+++ b/src/app/auth/pages/forgot-password/forgot-password.component.css
@@ -2,22 +2,12 @@
   width: 100%;
 }
 
-.links {
-  display: flex;
-  flex-direction: column;
-  margin-top: 20px;
-}
-
-.links a {
-  margin-top: 10px;
-}
-
 .actions {
   text-align: center;
   margin-top: 20px;
 }
 
-.login-card {
+.forgot-password-card {
   max-width: 400px;
   margin: 50px auto;
   padding: 20px;
