--- a/src/app/main/pages/dashboard/dashboard.component.html
+++ b/src/app/main/pages/dashboard/dashboard.component.html
@@ -1,45 +1,3 @@
-<p>dashboard works!</p>
-<mat-sidenav-container fullscreen>
-
-  <mat-sidenav #sidenav mode="push" [ngStyle]="{ width: '250px' }">
-    <mat-toolbar>
-      <span>Menú</span>
-      <span class="spacer"></span>
-      <button mat-icon-button (click)="sidenav.toggle()">
-        <mat-icon>menu</mat-icon>
-      </button>
-
-    </mat-toolbar>
-
-    <mat-nav-list>
-      <mat-list-item *ngFor="let item of sidebarItems" [routerLink]="item.url" (click)="sidenav.toggle()">
-        <mat-icon class="mr-5">{{ item.icon }}</mat-icon>
-        {{ item.label }}
-      </mat-list-item>
-    </mat-nav-list>
-
-  </mat-sidenav>
-
-
-  <mat-toolbar color="primary">
-    <button mat-icon-button (click)="sidenav.toggle()">
-      <mat-icon>menu</mat-icon>
-    </button>
-
-    <span class="spacer"></span>
-
-    <div>
-      <mat-icon class="mx-5" matBadge="0" matBadgeColor="warn">email</mat-icon>
-      <mat-icon class="mr-2" mat-button>power_settings_new</mat-icon>
-    </div>
-
-  </mat-toolbar>
-
-
-  <div class="container p-5">
-
-    <router-outlet></router-outlet>
-
-  </div>
-
-</mat-sidenav-container>
+<app-layout>
+  <router-outlet></router-outlet>
+</app-layout>
