--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,9 @@
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  /* background-color: rgb(25, 28, 28); */
+}
 
 .spacer {
   flex: 1 1 auto;
