minimum change for label text

--- a/src/app/main/pages/alumns/alumn-new/alumn-new.component.html
+++ b/src/app/main/pages/alumns/alumn-new/alumn-new.component.html
@@ -20,12 +20,11 @@
   <div class="col-12">
     <div class="card">
       <h5>Registrar nuevo alumno</h5>
-      <p-divider></p-divider>
       <div class="p-fluid p-formgrid grid">
         <div class="col-12 md:col-7">
           <div class="p-fluid p-formgrid grid">
             <div class="field col-6">
-              <label htmlFor="state">Tipo Documento</label>
+              <label htmlFor="state">Documento</label>
               <p-dropdown [options]="dropdownItems" optionLabel="name" [(ngModel)]="selectedState"></p-dropdown>
             </div>
             <div class="field col-6">
