--- a/src/app/main/pages/alumns/components/alumn-card/alumn-card.component.html
+++ b/src/app/main/pages/alumns/components/alumn-card/alumn-card.component.html
@@ -23,8 +23,8 @@
   <p-divider></p-divider>
 
   <div class="flex justify-content-between mt-2">
-    <button pButton pRipple type="button" icon="pi pi-check" class="p-button-rounded p-button-outlined" [routerLink]="['/alumns/edit', alumn.id ]"></button>
-    <button pButton pRipple type="button" icon="pi pi-times" class="p-button-rounded p-button-danger p-button-outlined" [routerLink]="['/alumns', alumn.id ]"></button>
+    <button pButton pRipple label="Rutina" icon="pi pi-book" [routerLink]="['/alumns/edit', alumn.id ]"></button>
+    <button pButton pRipple type="button" icon="pi pi-ellipsis-v" class="p-button-rounded p-button-secondary p-button-text"></button>
   </div>
 
 </p-card>
