--- a/src/app/main/pages/alumns/alumn/alumn.component.html
+++ b/src/app/main/pages/alumns/alumn/alumn.component.html
@@ -4,7 +4,7 @@
   </div>
 </ng-template>
 
-<div *ngIf="alumn; else divLoading" class="grid p-2">
+<div *ngIf="alumn; else divLoading">
   <div class="surface-section px-5 py-4 md:px-5 lg:px-5">
     <ul class="list-none p-0 m-0 flex align-items-center font-medium mb-3">
       <li>
@@ -23,6 +23,36 @@
         <span class="text-900 line-height-3"> {{ alumn.nombre }} {{ alumn.apellido }}</span>
       </li>
     </ul>
-</div>
 
+    <div class="grid">
+      <div class="col-12">
+        <div class="card">
+          <h4>{{ alumn.nombre }} {{ alumn.apellido }}</h4>
+          <div class="grid">
+              <div class="col-12 sm:col-3 lg:col-2 flex align-items-center justify-content-center">
+                <img [src]="alumn | alumnImage" [alt]="alumn.nombre" class="responsive-img">
+              </div>
+            <div class="col-12 sm:col-9 lg:col-10 px-5 pt-2">
+              <p>This is your empty page template to start building beautiful applications.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 md:col-6">
+        <div class="card">
+          <h4>Próximo día</h4>
+          <p>This is your empty page template to start building beautiful applications.</p>
+        </div>
+      </div>
+
+      <div class="col-12 md:col-6">
+        <div class="card">
+          <h4>Semana Actual</h4>
+          <p>This is your empty page template to start building beautiful applications.</p>
+        </div>
+      </div>
+    </div>
+
+</div>
 
