--- a/src/app/main/pages/alumns/alumn/alumn.component.scss
+++ b/src/app/main/pages/alumns/alumn/alumn.component.scss
@@ -4,3 +4,12 @@
   align-items: center;
   height: 100vh;
 }
+
+.responsive-img {
+  width: 100%;
+  max-width: 160px;
+  height: auto;
+  aspect-ratio: 1/1;
+  object-fit: cover;
+  border-radius: 50%;
+}
